tests/baselines/reference/classDoesNotDependOnPrivateMember.errors.txt
classDoesNotDependOnPrivateMember.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== classDoesNotDependOnPrivateMember.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface I { }
        export class C {
            private x: I;
        }
    }